--- a/src/main/resources/application-sharding.yml
+++ b/src/main/resources/application-sharding.yml
@@ -3,7 +3,35 @@ spring:
     activate:
       on-profile: sharding
 
-  datasource:
-    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
-    url: jdbc:shardingsphere:classpath:sharding/sharding.yaml
+app:
+  shardingsphere:
+    yaml: |-
+      dataSources:
+        ds0:
+          dataSourceClassName: com.zaxxer.hikari.HikariDataSource
+          driverClassName: com.mysql.cj.jdbc.Driver
+          jdbcUrl: jdbc:mysql://81.71.41.177:3306/ds01?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
+          username: admin
+          password: SisUylirg2#l
+      
+      rules:
+        - !SHARDING
+          tables:
+            t_order:
+              actualDataNodes: ds0.t_order_$->{0..1}
+              tableStrategy:
+                standard:
+                  shardingColumn: order_id
+                  shardingAlgorithmName: t_order_mod
+              keyGenerateStrategy:
+                column: order_id
+                keyGeneratorName: snowflake
+          shardingAlgorithms:
+            t_order_mod:
+              type: INLINE
+              props:
+                algorithm-expression: t_order_$->{order_id % 2}
+          keyGenerators:
+            snowflake:
+              type: SNOWFLAKE
 
